--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@headlessui/react": "^1.7.14",
-        "@heroicons/react": "^2.0.17"
+        "@heroicons/react": "^2.0.17",
+        "react-router-dom": "^6.10.0"
     }
 }
